--- a/API_WEB/WebPage/index.html
+++ b/API_WEB/WebPage/index.html
@@ -4,11 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="custom.css">
     <title>Test</title>
 </head>
 <body>
-    <h1>Frases de itcs sjajsjdasjd</h1>
 
-    <script src ="functions.js"></script>    
+    <div id="TitleBar" class="container-fluid" >
+        <p id="TitleTxt" class="text-center" >Lorem Ipsum</p>
+    </div>
+    <div id="PhraseContainer"class="container">
+        <div id="TextBox"class="box">
+            <div class="texto">One</div>
+            <div class="texto">Two</div>
+            <div class="texto">Three</div>
+        </div>
+    </div>
+    <!--
+    <div id="PhraseContainer"class="container">
+        <div id="MainRow"class="row">
+            <div class="col-sm-4">Lorem Epsilum Lorem</div>
+            <div class="col-sm-4">Lorem Epsilum Lorem</div>
+            <div class="col-sm-4">Lorem Epsilum Lorem</div>
+            <div class="col-sm-4">Lorem Epsilum Lorem</div>
+        </div>
+    </div>
+    -->
+
+    <script src ="functions.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
 </body>
 </html>
