added BS4 button to html

--- a/API_WEB/WebPage/index.html
+++ b/API_WEB/WebPage/index.html
@@ -11,8 +11,13 @@
 <body>
 
     <div id="TitleBar" class="container-fluid" >
-        <p id="TitleTxt" class="text-center" >Lorem Ipsum</p>
+        <p id="TitleTxt">Lorem Ipsum</p>
     </div>
+
+    <div id="AddPhraseBtn" class="container-fluid">
+        <button type="button" class="btn btn-primary">Agregar frase</button>
+    </div>
+
     <div id="PhraseContainer"class="container">
         <div id="TextBox"class="box">
             
