modified id for buttons's container

--- a/API_WEB/WebPage/index.html
+++ b/API_WEB/WebPage/index.html
@@ -14,8 +14,8 @@
         <p id="TitleTxt">Lorem Ipsum</p>
     </div>
 
-    <div id="AddPhraseBtn" class="container-fluid">
-        <button type="button" class="btn btn-primary">Agregar frase</button>
+    <div id="btnSection" class="container-fluid">
+        <button id="AddPhraseBtn" type="button" class="btn btn-primary">Agregar frase</button>
     </div>
 
     <div id="PhraseContainer"class="container">
