--- a/API_WEB/WebPage/index.html
+++ b/API_WEB/WebPage/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div id="TitleBar" class="container-fluid" >
-        <p id="TitleTxt">Lorem Ipsum</p>
+        <p id="TitleTxt">¿Qué es para ti ser un ITC?</p>
     </div>
 
     <div id="btnSection" class="container-fluid">
